Add working raycasts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Three.js + TypeScript + Vite</title>
   </head>
   <body>
+    <div class="overlay">
+      <span class="dot"></span>
+    </div>
     <canvas id="scene"></canvas>
     <script type="module" src="/src/scene.ts"></script>
   </body>
